@@ -1,3 +1,9 @@
+2004-02-26 Yuxin Jiang <yjiang@matrics.com>
+
+	* src/sntp.c: When a new server is added to the list of unicast
+	servers don't wait 30 minutes before querying it for the first
+	time.
+
 2003-10-15  Dan Jakubiec  <djakubiec@yahoo.com>
             Andrew Lunn   <andrew.lunn@ascom.ch>
 
